--- a/CreditFix/Solution.ipynb
+++ b/CreditFix/Solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "velvet-transsexual",
+   "id": "cooked-spell",
    "metadata": {},
    "source": [
     "## Include required libararies"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "developed-terry",
+   "id": "southeast-fence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stock-stanley",
+   "id": "ordered-worker",
    "metadata": {},
    "source": [
     "## Load the Data"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "authentic-customer",
+   "id": "advisory-scanning",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "approved-footwear",
+   "id": "daily-energy",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forty-mistake",
+   "id": "further-purchase",
    "metadata": {},
    "source": [
     "We can see that there are 233,154 datapoints in the total dataset."
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innovative-syracuse",
+   "id": "removed-edwards",
    "metadata": {},
    "source": [
     "## Drop Null Values"
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dynamic-kidney",
+   "id": "cellular-tribe",
    "metadata": {},
    "source": [
     "Now we can simply identify the columns that contain NULL values."
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "appointed-commercial",
+   "id": "nutritional-officer",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "developed-helmet",
+   "id": "going-movement",
    "metadata": {},
    "source": [
     "We see that the feature `EMPLOYMENT_TYPE` is the only column containing NULL Values. Now there can be 2 options that can be either to drop the entire `EMPLOYMENT_TYPE` feature or just drop the rows that contain the NULL values for this feature. Now due to the large number of total datapoints in the entire dataset (233,154), the amount of NULL values (7,661) is considerable low which is only `3.29%` so it is better to drop the rows instead of droping the whole column as it may contain information that can effect the target variable and losing 3% of the data is not that harmful because we have enough datapoints to generalize on."
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "vietnamese-diameter",
+   "id": "signal-communication",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indoor-pregnancy",
+   "id": "foster-tunnel",
    "metadata": {},
    "source": [
     "We see that those 7,661 rows are dropped. Great!"
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "touched-compromise",
+   "id": "checked-affairs",
    "metadata": {},
    "source": [
     "## Add a new Feature of Age"
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unique-evans",
+   "id": "gothic-beverage",
    "metadata": {},
    "source": [
     "Now let's add a new `Age` feature and compute it using the current date."
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "qualified-wrestling",
+   "id": "intense-palestine",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "honest-merit",
+   "id": "round-backing",
    "metadata": {},
    "source": [
     "We see that the `Age` Feature has been added next to `DATE_OF_BIRTH` successfuly."
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stuffed-magic",
+   "id": "imperial-mountain",
    "metadata": {},
    "source": [
     "## 1: Feature Correlation with Target Variable"
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polar-whale",
+   "id": "productive-senate",
    "metadata": {},
    "source": [
     "First step is to see how many features are `categorical` in nature. The features that are `categorical` should be converted to numerical features first before measuring the correlation."
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "union-ladder",
+   "id": "respected-cooperative",
    "metadata": {},
    "outputs": [
     {
@@ -756,77 +756,77 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DISBURSAL_DATE</th>\n",
+       "      <th>DATE_OF_BIRTH</th>\n",
        "      <th>CREDIT_HISTORY_LENGTH</th>\n",
+       "      <th>PERFORM_CNS_SCORE_DESCRIPTION</th>\n",
        "      <th>EMPLOYMENT_TYPE</th>\n",
        "      <th>AVERAGE_ACCT_AGE</th>\n",
-       "      <th>PERFORM_CNS_SCORE_DESCRIPTION</th>\n",
-       "      <th>DATE_OF_BIRTH</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>03-08-2018</td>\n",
-       "      <td>0yrs 0mon</td>\n",
-       "      <td>Salaried</td>\n",
+       "      <td>01-01-1984</td>\n",
        "      <td>0yrs 0mon</td>\n",
        "      <td>No Bureau History Available</td>\n",
-       "      <td>01-01-1984</td>\n",
+       "      <td>Salaried</td>\n",
+       "      <td>0yrs 0mon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>26-09-2018</td>\n",
-       "      <td>1yrs 11mon</td>\n",
-       "      <td>Self employed</td>\n",
+       "      <td>31-07-1985</td>\n",
        "      <td>1yrs 11mon</td>\n",
        "      <td>I-Medium Risk</td>\n",
-       "      <td>31-07-1985</td>\n",
+       "      <td>Self employed</td>\n",
+       "      <td>1yrs 11mon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>01-08-2018</td>\n",
-       "      <td>0yrs 0mon</td>\n",
-       "      <td>Self employed</td>\n",
+       "      <td>24-08-1985</td>\n",
        "      <td>0yrs 0mon</td>\n",
        "      <td>No Bureau History Available</td>\n",
-       "      <td>24-08-1985</td>\n",
+       "      <td>Self employed</td>\n",
+       "      <td>0yrs 0mon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>26-10-2018</td>\n",
+       "      <td>30-12-1993</td>\n",
        "      <td>1yrs 3mon</td>\n",
+       "      <td>L-Very High Risk</td>\n",
        "      <td>Self employed</td>\n",
        "      <td>0yrs 8mon</td>\n",
-       "      <td>L-Very High Risk</td>\n",
-       "      <td>30-12-1993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>26-09-2018</td>\n",
-       "      <td>0yrs 0mon</td>\n",
-       "      <td>Self employed</td>\n",
+       "      <td>09-12-1977</td>\n",
        "      <td>0yrs 0mon</td>\n",
        "      <td>No Bureau History Available</td>\n",
-       "      <td>09-12-1977</td>\n",
+       "      <td>Self employed</td>\n",
+       "      <td>0yrs 0mon</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  DISBURSAL_DATE CREDIT_HISTORY_LENGTH EMPLOYMENT_TYPE AVERAGE_ACCT_AGE  \\\n",
-       "0     03-08-2018             0yrs 0mon        Salaried        0yrs 0mon   \n",
-       "1     26-09-2018            1yrs 11mon   Self employed       1yrs 11mon   \n",
-       "2     01-08-2018             0yrs 0mon   Self employed        0yrs 0mon   \n",
-       "3     26-10-2018             1yrs 3mon   Self employed        0yrs 8mon   \n",
-       "4     26-09-2018             0yrs 0mon   Self employed        0yrs 0mon   \n",
+       "  DISBURSAL_DATE DATE_OF_BIRTH CREDIT_HISTORY_LENGTH  \\\n",
+       "0     03-08-2018    01-01-1984             0yrs 0mon   \n",
+       "1     26-09-2018    31-07-1985            1yrs 11mon   \n",
+       "2     01-08-2018    24-08-1985             0yrs 0mon   \n",
+       "3     26-10-2018    30-12-1993             1yrs 3mon   \n",
+       "4     26-09-2018    09-12-1977             0yrs 0mon   \n",
        "\n",
-       "  PERFORM_CNS_SCORE_DESCRIPTION DATE_OF_BIRTH  \n",
-       "0   No Bureau History Available    01-01-1984  \n",
-       "1                 I-Medium Risk    31-07-1985  \n",
-       "2   No Bureau History Available    24-08-1985  \n",
-       "3              L-Very High Risk    30-12-1993  \n",
-       "4   No Bureau History Available    09-12-1977  "
+       "  PERFORM_CNS_SCORE_DESCRIPTION EMPLOYMENT_TYPE AVERAGE_ACCT_AGE  \n",
+       "0   No Bureau History Available        Salaried        0yrs 0mon  \n",
+       "1                 I-Medium Risk   Self employed       1yrs 11mon  \n",
+       "2   No Bureau History Available   Self employed        0yrs 0mon  \n",
+       "3              L-Very High Risk   Self employed        0yrs 8mon  \n",
+       "4   No Bureau History Available   Self employed        0yrs 0mon  "
       ]
      },
      "execution_count": 7,
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "transparent-semester",
+   "id": "pediatric-opportunity",
    "metadata": {},
    "outputs": [
     {
@@ -889,28 +889,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>DATE_OF_BIRTH</td>\n",
+       "      <td>14417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>CREDIT_HISTORY_LENGTH</td>\n",
        "      <td>291</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>EMPLOYMENT_TYPE</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>AVERAGE_ACCT_AGE</td>\n",
-       "      <td>192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>PERFORM_CNS_SCORE_DESCRIPTION</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EMPLOYMENT_TYPE</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>DATE_OF_BIRTH</td>\n",
-       "      <td>14417</td>\n",
+       "      <td>AVERAGE_ACCT_AGE</td>\n",
+       "      <td>192</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -919,11 +919,11 @@
       "text/plain": [
        "                        Variable  Distinct Count\n",
        "0                 DISBURSAL_DATE              84\n",
-       "1          CREDIT_HISTORY_LENGTH             291\n",
-       "2                EMPLOYMENT_TYPE               2\n",
-       "3               AVERAGE_ACCT_AGE             192\n",
-       "4  PERFORM_CNS_SCORE_DESCRIPTION              20\n",
-       "5                  DATE_OF_BIRTH           14417"
+       "1                  DATE_OF_BIRTH           14417\n",
+       "2          CREDIT_HISTORY_LENGTH             291\n",
+       "3  PERFORM_CNS_SCORE_DESCRIPTION              20\n",
+       "4                EMPLOYMENT_TYPE               2\n",
+       "5               AVERAGE_ACCT_AGE             192"
       ]
      },
      "execution_count": 8,
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corrected-shame",
+   "id": "going-disco",
    "metadata": {},
    "source": [
     "We can observe the from all 6 of these `categorical variables` it only makes sence to use `EMPLOYMENT_TYPE` for our analysis purposes as all other features are simply dates or having too many categories. "
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amber-globe",
+   "id": "industrial-borough",
    "metadata": {},
    "source": [
     "So let's just drop the irrelevant columns and convert Categorical Columns to Numeric columns. For this purpose we can go with Pandas `.astype('category').cat.codes`."
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "structured-digest",
+   "id": "realistic-trinidad",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "green-organic",
+   "id": "bored-sequence",
    "metadata": {},
    "source": [
     "So we have got ridden on `Non-Numeric` data from our dataset and we now only have `Numeric` data. Great!"
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "banned-delight",
+   "id": "humanitarian-military",
    "metadata": {},
    "source": [
     "Now let's start the analysis by calculating feature correlations. For this purpose we can use a heatmap to get an idea of the features with each other."
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "available-audit",
+   "id": "billion-ridge",
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "conceptual-seller",
+   "id": "efficient-clark",
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "athletic-register",
+   "id": "bibliographic-brick",
    "metadata": {},
    "source": [
     "These are the features that are positively correlated with the target variable, so we will continue with these features."
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "configured-silicon",
+   "id": "driven-product",
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accessory-situation",
+   "id": "charming-dover",
    "metadata": {},
    "source": [
     "## 2: Demographic Data Impact"
@@ -1553,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "moving-honor",
+   "id": "second-dominican",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1561,14 +1561,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lined-parent",
+   "id": "declared-taste",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "finite-delivery",
+   "id": "stuck-action",
    "metadata": {},
    "source": [
     "## 3: Features for feature analysis"
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hollow-tension",
+   "id": "grave-pulse",
    "metadata": {},
    "source": [
     "Feature that are more than 0.02 correlation can be used for feature analysis as they have a higher imapct on the target variable."
@@ -1585,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "satellite-lindsay",
+   "id": "lightweight-transportation",
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stopped-discrimination",
+   "id": "toxic-prior",
    "metadata": {},
    "source": [
     "We can also use XGBoostClassifier to know the feature importance."
@@ -1637,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "prospective-dayton",
+   "id": "thrown-jumping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,14 +1649,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "complicated-destruction",
+   "id": "polyphonic-toilet",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[01:08:44] WARNING: /Users/travis/build/dmlc/xgboost/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+      "[11:06:57] WARNING: /Users/travis/build/dmlc/xgboost/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
      ]
     },
     {
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "british-gates",
+   "id": "dangerous-trick",
    "metadata": {},
    "source": [
     "Let's get features that have f-score more than 300"
@@ -1695,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "returning-factory",
+   "id": "varied-installation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appointed-wilderness",
+   "id": "continent-thailand",
    "metadata": {},
    "source": [
     "## 4: Estimator Recommendation"
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-binary",
+   "id": "functional-share",
    "metadata": {},
    "source": [
     "As we have too many features and it is not able to visualize them in 22 dimensions, we can use `PCA(Principle Component Analysis)` for dimentionality reduction. We use PCA with 2 components so we get two features in return. "
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "worthy-insurance",
+   "id": "asian-juice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1732,7 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "classical-summer",
+   "id": "recreational-retrieval",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1746,7 +1746,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "careful-needle",
+   "id": "primary-submission",
    "metadata": {},
    "outputs": [
     {
@@ -1777,36 +1777,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "final-ranking",
+   "id": "stylish-dividend",
    "metadata": {},
    "source": [
     "We can see that there is a perfect gap between the 2 classes. So we can use \n",
     "\n",
     "## Supervised Learning\n",
-    "##### 1) Deep Neural Network with a Single output Neuron with Softmax activation\n",
+    "##### 1) Deep Neural Network with a Single output Neuron with Softmax or Sigmoid activation\n",
     "##### 2) Logistic Regression\n",
     "##### 3) Naive Bays\n",
     "##### 4) SVM (Support Vector Machine)\n",
     "##### 5) Decision Trees \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "administrative-barcelona",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "collect-faculty",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
