Add missing value analysis
Difference between `isnull().sum()` and `isnull().sum().sum()`

--- a/PML_RMC_Peshawar/main.ipynb
+++ b/PML_RMC_Peshawar/main.ipynb
@@ -98,17 +98,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "source": [
     "# Check if data has missing values\n",
-    "print(\"Missing values in data: {}\".format(data.isnull().sum().sum()))"
+    "print(f\"NaN values at each column:\\n {raw_data.isnull().sum()}\")\n",
+    "print(f\"Total NaN values: {raw_data.isnull().sum().sum()}\")"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Missing values in data: 0\n"
+      "NaN values at each column:\n",
+      " 0     0\n",
+      "1     0\n",
+      "2     0\n",
+      "3     0\n",
+      "4     0\n",
+      "5     0\n",
+      "6     0\n",
+      "7     0\n",
+      "8     0\n",
+      "9     0\n",
+      "10    0\n",
+      "11    0\n",
+      "12    0\n",
+      "13    0\n",
+      "14    0\n",
+      "15    0\n",
+      "16    0\n",
+      "17    0\n",
+      "18    0\n",
+      "19    0\n",
+      "20    0\n",
+      "21    0\n",
+      "22    0\n",
+      "23    0\n",
+      "24    0\n",
+      "25    0\n",
+      "26    0\n",
+      "27    0\n",
+      "28    0\n",
+      "29    0\n",
+      "dtype: int64\n",
+      "Total NaN values: 0\n"
      ]
     }
    ],
